# trustworty_sppech_generator

./: .gitignore  README.md  TRUSTWORTHY_SPEECH_TRAINING.md  demo_pipeline.py  pyproject.toml  real_tts_pipeline.py  requirements.txt  simple_demo.py  test_data_loading.py  test_full_dataset.py  train_trustworthy_speech.py  update_paths.py  working_tts_pipeline.py
collected_ratings/: Pairwise_Preference_Test.csv  aggregated_df_tipi_q_pol.csv  aggregated_df_tipi_rec_pol.csv  processed_df_rec_pol.csv  speake_rate_gender_q_pol.csv
collected_ratings/collected_ratings/: aggregated_df_tipi_q_neu.csv  aggregated_df_tipi_rec_hum.csv  processed_df_hum_q.csv  processed_results_df_question.csv  processed_results_df_question_pol_v3.csv  processed_results_df_rec.csv
config/: config.json  tis-finetune.json  trustworthiness-finetune.json  trustworthy_speech_finetune.json  trustworthy_speech_full_dataset.json
datasets/synth/collected_ratings/: aggregated_df_tipi_q_humor.csv  processed_df_rec_hum.csv  speake_rate_gender_q_hum.csv  speake_rate_gender_rec_hum.csv  speake_rate_gender_rec_pol.csv
src/project/: main.py
src/project/data/: __init__.py  datamodule.py
src/project/model/: __init__.py  model.py
src/tspeech/: hubert.py
src/tspeech/common/: data.py
src/tspeech/data/: __init__.py  convert_mp3_to_wav.py  datamodule.py  dataset.py  import torchaudio.py  run_yyw.py  synth_speech_dataset.py  tis_collate_fn.py  tis_datamodule.py  tis_dataset.py  trustworthiness_datamodule.py  trustworthy_speech_collate_fn.py  (+2 more)
trustworthy_speech_env/: pyvenv.cfg
(+12 files in other folders)
